# book-sorter

./: add_goodreads_url.py  input.txt  main.py  organized_book_list.csv  pyproject.toml
