[tool.poetry]
name = "goodread-scraper"
version = "0.1.0"
description = ""
authors = ["Jaivin Wylde <me@jai.vin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.38.0"
goodreads = "^0.3.2"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
